# c_png_to_pnm

./: CMakeLists.txt  README.md  error_messages.h  lab2.c  out11.ppm  out3.ppm  out4.ppm  out5.ppm  out6.ppm
